--- a/Website/index.html
+++ b/Website/index.html
@@ -110,6 +110,21 @@
           <path class="elementor-shape-fill" d="M1000,40 C800,100 200,100 0,40 V0H1000V40z" fill="#9b1b30"></path>
         </svg>
       </section>
+      <section id="countdown-section" class="countdown-section">
+        <h2 id="countdown-heading">Sunday Service Starts In:</h2>
+        <div class="countdown" id="countdown-timer">
+          <span id="days">--</span> Days :
+          <span id="hours">--</span> Hours :
+          <span id="minutes">--</span> Minutes :
+          <span id="seconds">--</span> Seconds
+        </div>
+        <div class="in-progress" id="in-progress-msg" style="display: none;">
+          <strong>Service In Progress</strong>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" class="wave">
+          <path class="elementor-shape-fill" d="M1000,40 C800,100 200,100 0,40 V0H1000V40z" fill="#9b1b30"></path>
+        </svg>
+      </section>
       <section class="events-sec">
           <h1>Upcoming Events</h1>
           <div id="events-container" class="event-container"></div>
