--- a/Website/testing/test-leadership.html
+++ b/Website/testing/test-leadership.html
@@ -73,7 +73,6 @@
     <div class="leaders-title">Deacons</div>
 
     <div class="leaders-container">
-        <!-- Leader Cards -->
         <div class="leader-card">
             <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
             <div class="leader-name">Bannister McKenzie</div>
@@ -103,10 +102,12 @@
           <div class="leader-card">
             <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
             <div class="leader-name">Asha Grant</div>
+            <div class="ministry">Missions Department</div>
           </div>
           <div class="leader-card">
             <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
             <div class="leader-name">Violet Cohen</div>
+            <div class="ministry">Hospitality</div>
           </div>
           <div class="leader-card">
             <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
@@ -115,10 +116,12 @@
           <div class="leader-card">
             <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
             <div class="leader-name">Sherlene Gayle</div>
+            <div class="ministry">Youth Department</div>
           </div>
           <div class="leader-card">
             <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
             <div class="leader-name">Dorraine Watson</div>
+            <div class="ministry"> Women's Department</div>
           </div>
     </div>
 
@@ -138,11 +141,12 @@
         <div class="leader-card">
           <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
           <div class="leader-name">Doneila Sinclair</div>
+          <div class="ministry"> Men's Department</div>
         </div>
-  </div>
+  </div> 
 
-    <!-- Missionary -->
-    <div class="leaders-title">Missionary</div>
+    <!-- Missionaries -->
+    <div class="leaders-title">Missionaries</div>
 
     <div class="leaders-container">
       <div class="leader-card">
@@ -158,6 +162,32 @@
           <div class="leader-name">Chaniel Thomas</div>
         </div>
   </div>
+
+   <!-- Mothers -->
+   <div class="leaders-title">Mothers</div>
+
+   <div class="leaders-container">
+     <div class="leader-card">
+         <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+         <div class="leader-name">Glemma White</div>
+       </div>
+       <div class="leader-card">
+         <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+         <div class="leader-name">Cordelia Barnett</div>
+       </div>
+       <div class="leader-card">
+         <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+         <div class="leader-name">Vashti Wilson</div>
+       </div>
+       <div class="leader-card">
+        <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+        <div class="leader-name">Fay Wright</div>
+      </div>
+      <div class="leader-card">
+        <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+        <div class="leader-name">Inez Manning</div>
+      </div>
+ </div>
 
 
 
