--- a/Website/index.html
+++ b/Website/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="/styles/backToTop.css">
     <link rel="stylesheet" href="/styles/calendar.css">
     <style>
+      header{
+        position: absolute !important;
+      }
       .countdown-section {
         margin-top: 1rem;
         position: relative;
@@ -70,9 +73,10 @@
           <div class="live">
             <p>WATCH US LIVE SUNDAYS: 11:30AM</p>
             <div class="live-button">
-              <a href="https://www.youtube.com/@gtchq623/live" target="_blank"><img class="scpic"  src="/assets-and-images/icons/youtube.svg"></a>
+              <a href="https://www.youtube.com/@gtchq623/live" target="_blank"><img class="scpic"  src="/assets-and-images/icons/youtube.svg" alt="YouTube Link"></a>
             </div>
           </div>
+        </div>
         </div>
         <div class="slideshow-container">
             <div class="mySlides" style="background-image: url('/assets-and-images/images/churchFront.webp');"></div>
@@ -81,6 +85,7 @@
             <div class="mySlides" style="background-image: url('/assets-and-images/sanctuary.jpg');"></div>
             <div class="mySlides" style="background-image: url('/assets-and-images/images/youth-mmchoir.webp');"></div>
       </div>
+      
     <main>
       <section class="welcome-sec">
         <div class="p-welcome">
@@ -94,21 +99,6 @@
         </div>
         <div class="welcome-pic"></div>
       </section>
-      </section>
-      <section id="countdown-section" class="countdown-section">
-        <h2 id="countdown-heading">Sunday Service Starts In:</h2>
-        <div class="countdown" id="countdown-timer">
-          <span id="days">--</span> Days :
-          <span id="hours">--</span> Hours :
-          <span id="minutes">--</span> Minutes :
-          <span id="seconds">--</span> Seconds
-        </div>
-        <div class="in-progress" id="in-progress-msg" style="display: none;">
-          <strong>Service In Progress</strong>
-        </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" class="wave">
-          <path class="elementor-shape-fill" d="M1000,40 C800,100 200,100 0,40 V0H1000V40z" fill="#9b1b30"></path>
-        </svg>
       </section>
       <section id="countdown-section" class="countdown-section">
         <h2 id="countdown-heading">Sunday Service Starts In:</h2>
