--- a/Website/about-us.html
+++ b/Website/about-us.html
@@ -4,84 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
-  <link rel="stylesheet" href="../styles/general.css">
   <link rel="stylesheet" href="/styles/backToTop.css">
+  <link rel="stylesheet" href="/styles/aboutUs.css">
   <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <style>
+
+  </style>
 </head>
 <body>
   <div id="header"></div>
-  <div class="temp-banner"></div>
- 
+
+  <div class="top">
+    <div class="reveal"></div>
+  </div>
 
   <main>
-
+    <section class="aboutUsSec, sec">
+      <div class="aboutUsContent">
+        <h1>About Us</h1>
+        <p>Who we are and what we stand for</p>
+      </div>
+    </section>
+    <section class="infoSec, sec"></section>
+    <section class="sec"></section>
+    <section class="sec"></section>
   </main>
-  
+
+
+
   <button onclick="topFunction()" id="backToTop" title="Go to top">
     <img class="btn-img"  src="/assets-and-images/backToTop.svg" alt="Back to Top">
   </button>
   <div id="footer"></div>
-  <script src="../scripts/include.js"></script>
-  <script>
-    // Wait for the header to be loaded before initializing the menu
-    document.addEventListener("headerLoaded", function () {
-      console.log("Header loaded, initializing menu functionality");
-  
-      const hamburger = document.querySelector(".hamburger");
-      const mobileMenu = document.querySelector(".mobile-menu");
-      const closeMenu = document.querySelector(".close-menu");
-      const menuOverlay = document.querySelector(".menu-overlay");
-  
-      // Debugging: Log the elements to ensure they are found
-      console.log({
-        hamburger,
-        mobileMenu,
-        closeMenu,
-        menuOverlay,
-      });
-  
-      if (!hamburger || !mobileMenu || !closeMenu || !menuOverlay) {
-        console.error("One or more elements not found:", { hamburger, mobileMenu, closeMenu, menuOverlay });
-        return; // Exit if any of the elements are missing
-      }
-  
-      console.log("Menu elements found, adding event listeners");
-  
-      // Function to open the menu
-      function openMenu() {
-        console.log("Opening menu");
-        mobileMenu.classList.add("active");
-        menuOverlay.classList.add("active");
-        document.body.style.overflow = "hidden"; // Disable scrolling
-      }
-  
-      // Function to close the menu
-      function closeMenuFunction() {
-        console.log("Closing menu");
-        mobileMenu.classList.remove("active");
-        menuOverlay.classList.remove("active");
-        document.body.style.overflow = ""; // Restore scrolling
-      }
-  
-      // Attach event listeners
-      hamburger.addEventListener("click", openMenu);
-      closeMenu.addEventListener("click", closeMenuFunction);
-      menuOverlay.addEventListener("click", closeMenuFunction);
-      document.addEventListener("keydown", function (e) {
-        if (e.key === "Escape") {
-          closeMenuFunction();
-        }
-      });
-  
-      // Close menu when resizing to desktop
-      window.addEventListener("resize", function () {
-        if (window.innerWidth > 920) {
-          closeMenuFunction();
-        }
-      });
-  
-      console.log("Menu script initialized");
-    });
-  </script>
+  <script src="../scripts/include.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
 </body>
 </html>
