--- a/Website/leadership.html
+++ b/Website/leadership.html
@@ -6,12 +6,133 @@
   <title>Leadership</title>
   <link rel="stylesheet" href="/styles/general.css">
   <link rel="stylesheet" href="/styles/backToTop.css">
+  <link rel="stylesheet" href="/styles/bio.css">
   <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
 </head>
+<style>
+
+  .officer-sec {
+    display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      max-width: 1200px;
+      background: #FDF2E9;
+      border-radius: 10px;
+  }
+
+  .leaders-title {
+      font-size: 1.5em;
+      font-weight: bold;
+      color: #9B1B30;
+      margin-bottom: 10px;
+  }
+
+  .leaders-container {
+      display: flex;
+      align-items: space-between;
+      overflow-x: auto;  
+      scroll-snap-type: x mandatory; 
+      gap: 15px;
+      padding: 10px;
+      max-width: 100%;
+      border-radius: 10px;
+      scrollbar-width: none; 
+  }
+
+ 
+  .leaders-container::-webkit-scrollbar {
+      display: none;
+  }
+
+
+  .leader-card {
+    display: flex;
+      flex: 0 0 auto; 
+      flex-direction: column;
+      justify-content: space-between;
+      width: 200px; 
+      height: 275px;
+      text-align: center;
+      background: white;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      scroll-snap-align: start; /* Makes each card snap into place */
+  }
+
+  
+  .leader-card img {
+      width: 100%;
+      border-radius: 10px;
+      object-fit: cover;
+      height: 200px;
+  }
+
+
+  .leader-name {
+      font-size: 1em;
+      font-weight: bold;
+      color: #2D2D2D;
+      margin-top: 5px;
+  }
+
+  .leader-info {
+    letter-spacing: 2px;
+    display: flex;
+    flex-direction: column;
+  }
+  @media (max-width: 450px) {
+      .pfp{
+        margin: 0px;
+      }
+    }
+</style>
 <body>
   <div id="header"></div>
   <div class="temp-banner"></div>
-  <main></main>
+  <main>
+    <!-- Main Leaders-->
+     <!--Bishop's Bio-->
+    <div class="bio">
+      <img class="pfp" src="../assets-and-images/Bishop Picture.jpg">
+    <div class="p-bio">
+      <h6 class="title">Presiding Bishop</h6>
+      <h2 class="name">Kingsford Bloomfield</h2>
+      <div>
+          <p class="bio-info">
+          Bishop Kingsford A. Bloomfield, born in Passage Fort, St. Catherine, Jamaica, accepted the Lord at the tender age of nine and a half while attending The Rehoboth Apostolic Church. After witnessing his friend’s decision to accept Christ, he too, decided to follow the same path that very night. He went on to graduate from St. Jago High School and the University of the West Indies at Mona. As a young minister, he served under the leadership of Bishop B.S.E. Dyer primarily as a musician and a Sunday School teacher while ardently supporting the ministry in various other areas.
+
+          </p>
+          <p class="bio-info">
+            After migrating to the United States, he faithfully served under our late founder, Bishop Samuel Green II at the Headquarters church as an Elder, Musician, and Bible Teacher, among various other duties. In 1997 he was sent to the Franklin Ave branch and served as the Pastor there for seven years. Bishop, Mother Bloomfield and the saints there experienced a tremendous transformation and growth of the ministry there. While at the Franklin Ave branch, he was consecrated as an Overseer. After the death of our Founding Bishop in November 2003, he returned to pastor the Headquarters church in 2004. Subsequently in October 2006, he was consecrated as the Presiding Bishop of the Gospel Tabernacle churches. He currently serves in this capacity overseeing the 11 branches within the organization.
+
+          </p>
+          <p class="bio-info">
+            His wife of almost 45 years, Mother Janette Bloomfield, a powerful and committed woman of God is his biggest supporter who is in constant prayer and intercession on his behalf. They both have worked in ministry for most of their lives and continue to be steadfast in their dedication to serving the people of God. Together were blessed by the Lord with three children, Kijan, Kajette, and Kingsford II as well as many adopted and spiritual children. Bishop Bloomfield is fully surrendered to the call of God on his life and trusts God explicitly for direction. He often can be heard encouraging the saints to exercise their faith in God without reservation, this he believes will allow us to truly experience all God has for us individually and as a church family.
+      </p>
+      </div>
+    </div>
+  </div>
+  <!-- Pastor's Bio -->
+    <div class="bio">
+      <div>
+        <img class="pfp" src="../assets-and-images/images/Elder-Kev-pic.webp">
+      </div>
+      <div class="p-bio">
+        <h6 class="title">Pastor</h6>
+        <h2 class="name">Elder Kevin Gayle</h2>
+        <div>
+        <p class="bio-info">Elder Kevin Gayle, a third-generation Apostolic preacher, was born in Manchester, Jamaica, WI and migrated with his family to Brooklyn, NY at the age of four. He spent 17 years under the leadership of the late, Apostle and Founder of the Gospel Tabernacle Church, Bishop Samuel Green II. During this time he accepted the Lord as his personal savior and was carefully nurtured in the gospel by his Pastor and the church family.</p>
+          <p class="bio-info">He currently serves as the Pastor of this ministry under the leadership of the current Presiding Bishop, Bishop Kingsford A. Bloomfield Sr.. Elder Gayle has served in various capacities in the ministry over the years. In particular, he has an intense desire to see youth enthused and fully engaged in the work of the Lord. This passion to see young people succeed has spilled over into his professional life, as he is employed as an Academic Counselor at the Kingsborough Community College. Elder Gayle holds a Bachelor's Degree in Health Science, a Master's Degree in Social Work, and a Master's Degree in Ministry. He is married to the one he calls, his "rib", Evangelist Sherlene Gayle; a powerful intercessor who stands by him all the way. God has blessed them with four wonderful children; Sarah, Khloe, Simon, and Nathan. He desires to do ALL that God has commissioned him to do and live that his life will bring glory to God in all things.</p>
+        </div>
+      </div>
+    </div>
+  <!-- Sr. Elder's Bio -->
+  <!-- Elder's Bio -->
+  <!--Sr. Minister Bio-->
+  <!--Officer's Section-->
+  </main>
   <button onclick="topFunction()" id="backToTop" title="Go to top">
     <img class="btn-img"  src="/assets-and-images/backToTop.svg" alt="Back to Top">
   </button>
