Change Log -Large Content
1. Adding major additions to the website
1a Leader section now contains the Pastor and the Bishop
1b Departments now contain all the main departments that need to be added
1c About us page now has more structure

2.  Footer and Temporary Banner now has a gradient styling

3. Verse Section will be reduced in text sizing on larger screens

4. Countdown is now smaller and at the near top of the page

Co-Authored-By: GTCHQDevs <203009018+GTCHQDevs@users.noreply.github.com>

--- a/Website/about-us.html
+++ b/Website/about-us.html
@@ -15,20 +15,91 @@
 <body>
   <div id="header"></div>
 
-  <div class="top">
+  <div class="top hero">
     <div class="reveal"></div>
   </div>
 
   <main>
-    <section class="aboutUsSec, sec">
+    <!-- About Us -->
+    <section class="aboutUsSec sec">
       <div class="aboutUsContent">
         <h1>About Us</h1>
-        <p>Who we are and what we stand for</p>
+        <p>We are a Spirit-filled Apostolic church rooted in the teachings of Jesus Christ. We believe in holiness, the power of the Holy Ghost, and salvation through baptism in Jesus' name.</p>
       </div>
     </section>
-    <section class="infoSec, sec"></section>
-    <section class="sec"></section>
-    <section class="sec"></section>
+  
+    <!-- Our Faith -->
+    <section class="sec">
+      <h2>Our Faith</h2>
+      <p>We believe in one God revealed in Jesus Christ, full salvation through repentance, water baptism in Jesus’ name, and the infilling of the Holy Ghost. We live by the Word, obey the call to holiness, and look forward to the Lord’s return.</p>
+    </section>
+  
+    <!-- Leadership -->
+    <section class="sec leaders-sec">
+      <h2>Our Leaders</h2>
+      <p>Our church is guided by dedicated spiritual leaders who serve faithfully:</p>
+      <div class="leaders-container">
+        <div class="leader-card"> <!--Bishop-->
+          <img src="../assets-and-images/images/Bishop Picture.webp" alt="Bishop Kingsford A. Bloomfied">
+          <div class="leader-info">
+            <div class="leader-name">Kingsford A. Bloomfied</div>
+            <div class="ministry">Presiding Bishop</div>
+          </div>
+        </div>
+      <div class="leader-card"> <!--Pastor Gayle-->
+            <img src="../assets-and-images/images/Elder-Kev-pic.webp" alt="Pastor Kevin Gayle">
+            <div class="leader-info">
+              <div class="leader-name">Kevin Gayle</div>
+              <div class="ministry">Pastor</div>
+            </div>
+          </div>
+        <div class="leader-card"> <!--Elder Davis-->
+            <img src="../assets-and-images/icons/temp-male-icon.svg" alt="Elder Richard Davis">
+            <div class="leader-info">
+              <div class="leader-name">Richard Davis</div>
+              <div class="ministry">Senior Elder</div>
+            </div>
+          </div>
+        <div class="leader-card">
+            <img src="assets-and-images/images/Elder-Watson.webp" alt="Elder Owen Wattson">
+            <div class="leader-info">
+              <div class="leader-name">Owen Wattson</div>
+              <div class="ministry">Elder</div>
+            </div>
+          </div>
+        <div class="leader-card">
+              <img src="../assets-and-images/icons/temp-female-icon.svg"alt="Dr Merlene Scott-Burrell">
+              <div class="leader-info">
+                <div class="leader-name">Dr Merlene Scott-Burrell</div>
+                <div class="ministry">Senior Minister</div>
+              </div>
+          </div>
+        </div>
+    </section>
+  
+    <!-- Service Times -->
+<section class="sec serviceTimesSec">
+  <h2>Service Times</h2>
+  <div class="service-grid">
+    <div class="service-item"><strong>Sunday School</strong><br>10:00 AM</div>
+    <div class="service-item"><strong>Sunday Worship</strong><br>11:30 AM</div>
+    <div class="service-item"><strong>Tuesday Prayer</strong><br>8:00 PM</div>
+    <div class="service-item"><strong>Wednesday Bible Study</strong><br>8:00 PM</div>
+  </div>
+  <p class="location">📍 2314 Snyder Ave, Brooklyn, NY 11226</p>
+</section>
+  
+    <!-- Ministries / Get Involved -->
+    <section class="sec">
+      <h2>Ministries</h2>
+      <p>We offer various ministries and activities designed to support spiritual growth, fellowship, and service.</p>
+    </section>
+  
+    <!-- Join Us -->
+    <section class="sec">
+      <h2>Join Us</h2>
+      <p>We welcome everyone to worship with us. Whether you're seeking truth or looking for a home church, we invite you to come and grow with us in Christ.</p>
+    </section>
   </main>
 
 
@@ -40,5 +111,6 @@
   <script src="../scripts/include.js"></script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+  <script src="/scripts/menu.js"></script>
 </body>
 </html>
