--- a/Website/testing/test-leadership.html
+++ b/Website/testing/test-leadership.html
@@ -88,24 +88,25 @@
 </head>
 <body>
   <section class="officer-sec">
+
     <!-- Deacons -->
     <div class="leaders-title">Deacons</div>
 
     <div class="leaders-container">
         <div class="leader-card">
-            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <img src="../assets-and-images/icons/temp-male-icon.svg" alt="Leader 1">
             <div class="leader-name">Bannister McKenzie</div>
           </div>
         <div class="leader-card">
-          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/icons/temp-male-icon.svg" alt="Leader 1">
           <div class="leader-name">Alphy Beckford</div>
         </div>
         <div class="leader-card">
-          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/icons/temp-male-icon.svg" alt="Leader 1">
           <div class="leader-name">Franklin Rose</div>
         </div>
         <div class="leader-card">
-      <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+      <img src="../assets-and-images/icons/temp-male-icon.svg" alt="Leader 1">
       <div class="leader-name">Herbert Riley</div>
         </div>
       </div>
@@ -115,36 +116,36 @@
 
     <div class="leaders-container">
         <div class="leader-card">
-            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
             <div class="leader-name">Karlene Clarke</div>
           </div>
           <div class="leader-card">
-            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
             <div class="leader-info">
               <div class="leader-name">Asha Grant</div>
               <div class="ministry">Missions Department</div>
             </div>
           </div>
           <div class="leader-card">
-            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
             <div class="leader-info">
               <div class="leader-name">Violet Cohen</div>
               <div class="ministry">Hospitality</div>
             </div>
           </div>
           <div class="leader-card">
-            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
             <div class="leader-name">Naina Dunkley</div>
           </div>
           <div class="leader-card">
-            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
             <div class="leader-info">
               <div class="leader-name">Sherlene Gayle</div>
               <div class="ministry">Youth Department</div>
             </div>
           </div>
           <div class="leader-card">
-            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
             <div class="leader-info">
               <div class="leader-name">Dorraine Watson</div>
               <div class="ministry"> Women's Department</div>
@@ -158,15 +159,15 @@
 
     <div class="leaders-container">
       <div class="leader-card">
-          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
           <div class="leader-name">Stacy-Ann Chambers</div>
         </div>
         <div class="leader-card">
-          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
           <div class="leader-name">Keneisha Harrison</div>
         </div>
         <div class="leader-card">
-          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/icons/temp-male-icon.svg" alt="Leader 1">
           <div class="leader-info">
             <div class="leader-name">Doneila Sinclair</div>
             <div class="ministry"> Men's Department</div>
@@ -179,15 +180,15 @@
 
     <div class="leaders-container">
       <div class="leader-card">
-          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
           <div class="leader-name">Pauline Green</div>
         </div>
         <div class="leader-card">
-          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
           <div class="leader-name">Judy-Ann Brown</div>
         </div>
         <div class="leader-card">
-          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
           <div class="leader-name">Chaniel Thomas</div>
         </div>
   </div>
@@ -197,23 +198,23 @@
 
    <div class="leaders-container">
      <div class="leader-card">
-         <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+         <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
          <div class="leader-name">Glemma White</div>
        </div>
        <div class="leader-card">
-         <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+         <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
          <div class="leader-name">Cordelia Barnett</div>
        </div>
        <div class="leader-card">
-         <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+         <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
          <div class="leader-name">Vashti Wilson</div>
        </div>
        <div class="leader-card">
-        <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+        <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
         <div class="leader-name">Fay Wright</div>
       </div>
       <div class="leader-card">
-        <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+        <img src="../assets-and-images/icons/temp-female-icon.svg" alt="Leader 1">
         <div class="leader-name">Inez Manning</div>
       </div>
  </div>
