--- a/Website/index.html
+++ b/Website/index.html
@@ -82,7 +82,7 @@
       <div class="top">
         <div class="welcome-msg">
           <h1>Welcome</h1>
-          <h5>To the new and improved GTC Snyder Webpage</h5>
+          <h5>To GTC Snyder's Webpage</h5>
           <div class="live">
             <p>WATCH US LIVE SUNDAYS: 11:30AM</p>
             <div class="live-button">
@@ -135,8 +135,8 @@
       </section>
       <section id="verse-of-the-day"  class="verse-sec" style="letter-spacing: 5px; padding: 2rem; gap: 20px; background-image:url('/assets-and-images/images/verses-background.webp'); background-color: rgba(0, 0, 0, 0.624);">
           <h1>Verse of the Day</h1>
-          <blockquote id="verse-text" style="background: #00000027; color: #f9f9f9; letter-spacing: 5px;  font-size: clamp(1rem, 1.9vw, 3.4rem);    ">Loading...</blockquote>
-          <p id="verse-reference" style="font-weight: bold; color: #ffd369; letter-spacing: 5px;  font-size: clamp(1.4rem, 1.5vw, 3.6rem);"></p>
+          <blockquote id="verse-text" style="background: #00000027; color: #f9f9f9; letter-spacing: 5px;  font-size: clamp(1rem, 1.2vw, 3.4rem);    ">Loading...</blockquote>
+          <p id="verse-reference" style="font-weight: bold; color: #ffd369; letter-spacing: 5px;  font-size: clamp(1.4rem, 1.4vw, 3.6rem);"></p>
       </section>
       <section></section>
     </main>
