--- a/Website/testing/test-departments.html
+++ b/Website/testing/test-departments.html
@@ -4,22 +4,42 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Church Ministries</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       background: #f5f5f5;
+      color: #222;
     }
 
     .ministry-section {
       width: 100%;
+      padding: 3rem 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+      align-items: center;
+    }
+
+    .ministry-container {
+      position: relative;
+      width: 100%;
+      max-width: 1200px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .ministry-block {
       position: relative;
+      width: 100%;
       height: 400px;
+      border-radius: 12px;
       overflow: hidden;
-      margin-bottom: 40px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      background-color: #aaa;
+      margin-left: 90px; /* Push to the right to make space for the image */
     }
 
     .ministry-bg {
@@ -27,173 +47,196 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 120%;
+      height: 100%;
       background-size: cover;
-      background-position: top center;
-      z-index: -1;
-      transform: translateZ(0);
+      background-position: center;
+      z-index: 0;
+      filter: brightness(0.65);
     }
 
     .ministry-content {
-      position: absolute;
-      bottom: 20px;
-      left: 20px;
-      color: white;
-      text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-      background-color: rgba(0, 0, 0, 0.4);
-      padding: 10px 15px;
-      border-radius: 8px;
-      letter-spacing: 2px;
+      position: relative;
+      z-index: 1;
+      color: #fff;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 2rem;
+      text-align: center;
     }
 
     .ministry-content h2 {
       margin: 0;
-      font-size: 24px;
+      font-size: 1.8rem;
+      font-weight: 600;
+      letter-spacing: 1px;
     }
 
     .ministry-content p {
-      margin: 5px 0 0;
-      font-size: 16px;
-    }
-
-    .ministry-leader {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
-      width: 120px;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 25%;
-      border: 3px solid white;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      margin-top: 10px;
+      font-size: 1rem;
     }
 
     .leader-card {
-  width: 200px;
-  text-align: center;
-  background: white;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  margin-top: 20px;
-}
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 180px;
+      background: rgba(255, 255, 255, 0.5);
+      border-radius: 12px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+      text-align: center;
+      padding-bottom: 10px;
+      z-index: 2;
+    }
 
 .leader-card img {
   width: 100%;
-  height: 200px;
+  height: 100%;
+  height: 200px; /* or set a fixed height */
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 12px 12px 0 0;
+  display: block;
 }
 
 .leader-name {
   font-weight: bold;
   color: #2D2D2D;
-  margin-top: 8px;
+  font-size: 1rem;
+  padding-top: 10px;
+
 }
+
+    @media (max-width: 768px) {
+      .ministry-container {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 2rem;
+      }
+
+      .ministry-block {
+        margin-left: 0;
+        width: 100%;
+        height: 250px;
+      }
+
+      .leader-card {
+        position: static;
+        transform: none;
+        margin-bottom: 1rem;
+        width: 160px;
+      }
+    }
   </style>
 </head>
 <body>
   <section class="ministry-section">
-    <!--Men's Department-->
-    <div class="ministry-block" data-bg="mens.webp">
-      <div class="ministry-bg"></div>
-      <div class="ministry-content">
-        <h2>Men's Department</h2>
-        <p>Reaching out with love to the local and global community.</p>
-      </div>
 
+    <!-- Men's Department -->
+    <div class="ministry-container">
       <div class="leader-card">
-        <img src="../assets-and-images/pfp.jpeg" alt="Worship Leader" />
+        <img src="../assets-and-images/pfp.jpeg" alt="Owen Wattson">
         <div class="leader-name">Owen Wattson</div>
       </div>
+      <div class="ministry-block">
+        <div class="ministry-bg"></div>
+        <div class="ministry-content">
+          <h2>Men's Department</h2>
+          <p>Empowering men to lead spiritually and serve faithfully in their families, church, and community.</p>
+          <p class="vccs">Visual Content coming soon</p>
+        </div>
+      </div>
     </div>
 
-    <!--Women's Department-->
-    <div class="ministry-block" data-bg="womens.jpg">
-      <div class="ministry-bg"></div>
-      <div class="ministry-content">
-        <h2>Women's Department</h2>
-        <p>Reaching out with love to the local and global community.</p>
-      </div>
-
+    <!-- Women's Department -->
+    <div class="ministry-container">
       <div class="leader-card">
-        <img src="../assets-and-images/pfp.jpeg" alt="Worship Leader" />
+        <img src="../assets-and-images/pfp.jpeg" alt="Dorraine Wattson">
         <div class="leader-name">Dorraine Wattson</div>
       </div>
+      <div class="ministry-block">
+        <div class="ministry-bg"></div>
+        <div class="ministry-content">
+          <h2>Women's Department</h2>
+          <p>Supporting women through fellowship, faith-building, and outreach rooted in love and purpose.</p>
+          <p class="vccs">Visual Content coming soon</p>
+        </div>
+      </div>
     </div>
 
-    <!--Youth Department-->
-    <div class="ministry-block" data-bg="youth.webp">
-      <div class="ministry-bg"></div>
-      <div class="ministry-content">
-        <h2>Youth Department</h2>
-        <p>Reaching out with love to the local and global community.</p>
-      </div>
-
+    <!-- Youth Department -->
+    <div class="ministry-container">
       <div class="leader-card">
-        <img src="../assets-and-images/pfp.jpeg" alt="Worship Leader" />
+        <img src="../assets-and-images/pfp.jpeg" alt="Sherlene Gayle">
         <div class="leader-name">Sherlene Gayle</div>
       </div>
+      <div class="ministry-block">
+        <div class="ministry-bg"></div>
+        <div class="ministry-content">
+          <h2>Youth Department</h2>
+          <p>Guiding young people to grow in Christ, discover their gifts, and impact their generation.</p>
+          <p class="vccs">Visual Content coming soon</p>
+        </div>
+      </div>
     </div>
 
-    <!--Sunday School-->
-    <div class="ministry-block" data-bg="sundayschool.jpeg">
-      <div class="ministry-bg"></div>
-      <div class="ministry-content">
-        <h2>Sunday School</h2>
-        <p>Reaching out with love to the local and global community.</p>
-      </div>
-
+    <!-- Sunday School -->
+    <div class="ministry-container">
       <div class="leader-card">
-        <img src="../assets-and-images/pfp.jpeg" alt="Worship Leader" />
+        <img src="../assets-and-images/pfp.jpeg" alt="Dr. Burrell">
         <div class="leader-name">Dr. Burrell</div>
       </div>
+      <div class="ministry-block">
+        <div class="ministry-bg"></div>
+        <div class="ministry-content">
+          <h2>Sunday School</h2>
+          <p>Teaching the Word of God with clarity and care to children, youth, and adults of all ages.</p>
+          <p class="vccs">Visual Content coming soon</p>
+        </div>
+      </div>
     </div>
 
-
-    <!--Missions & Outreach-->
-    <div class="ministry-block" data-bg="missions.jpg">
-      <div class="ministry-bg"></div>
-      <div class="ministry-content">
-        <h2>Missions and Outreach</h2>
-        <p>Reaching out with love to the local and global community.</p>
-      </div>
-
+    <!-- Missions & Outreach -->
+    <div class="ministry-container">
       <div class="leader-card">
-        <img src="../assets-and-images/pfp.jpeg" alt="Worship Leader" />
+        <img src="../assets-and-images/pfp.jpeg" alt="Missions Leader">
         <div class="leader-name">Loading</div>
       </div>
+      <div class="ministry-block">
+        <div class="ministry-bg"></div>
+        <div class="ministry-content">
+          <h2>Missions and Outreach</h2>
+          <p>Sharing Christ’s love beyond the church walls—locally and globally.</p>
+          <p class="vccs">Visual Content coming soon</p>
+        </div>
+      </div>
     </div>
 
-
-    <!--Hospitality-->
-    <div class="ministry-block" data-bg="Hospitality.webp">
-      <div class="ministry-bg"></div>
-      <div class="ministry-content">
-        <h2>Hospitality</h2>
-        <p>Reaching out with love to the local and global community.</p>
-      </div>
-
+    <!-- Hospitality -->
+    <div class="ministry-container">
       <div class="leader-card">
-        <img src="../assets-and-images/pfp.jpeg" alt="Worship Leader" />
+        <img src="../assets-and-images/pfp.jpeg" alt="Hospitality Leader">
         <div class="leader-name">Loading</div>
       </div>
+      <div class="ministry-block">
+        <div class="ministry-bg"></div>
+        <div class="ministry-content">
+          <h2>Hospitality</h2>
+          <p>Welcoming every soul with warmth, care, and the heart of Christ.</p>
+          <p class="vccs">Visual Content coming soon</p>
+        </div>
+      </div>
     </div>
-    </section>
 
+  </section>
 
   <script>
     const imagePath = '../assets-and-images/images/';
-
     document.querySelectorAll('.ministry-block').forEach(block => {
       const bg = block.getAttribute('data-bg');
-      const img = block.getAttribute('data-img');
-
-      const bgDiv = block.querySelector('.ministry-bg');
-    
-
-      bgDiv.style.backgroundImage = `url('${imagePath}${bg}')`;
-
+      block.querySelector('.ministry-bg').style.backgroundImage = `url('${imagePath}${bg}')`;
     });
   </script>
 </body>
